chore: RuleAction hierarchy as records