@@ -2,8 +2,7 @@ package org.hisp.dhis.rules;
 
 import org.hisp.dhis.rules.models.Rule;
 import org.hisp.dhis.rules.models.RuleAction;
-import org.hisp.dhis.rules.models.RuleActionDisplayKeyValuePair;
-import org.hisp.dhis.rules.models.RuleActionDisplayText;
+import org.hisp.dhis.rules.models.RuleActionText;
 import org.hisp.dhis.rules.models.RuleDataValue;
 import org.hisp.dhis.rules.models.RuleEffect;
 import org.hisp.dhis.rules.models.RuleEffects;
@@ -22,6 +21,7 @@ import org.junit.runners.JUnit4;
 import java.text.SimpleDateFormat;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
@@ -48,12 +48,12 @@ public class RuleEngineFunctionTest
         throws Exception
     {
         Date enrollmentDate = new Date();
-        RuleAction ruleAction = RuleActionDisplayKeyValuePair.createForFeedback(
+        RuleAction ruleAction = RuleActionText.createForFeedback(
             "test_action_content", "2 + 2" );
         Rule failingRule = Rule
             .create( null, null, "d2:daysBetween(V{enrollment_date},V{event_date}) < 0",
-                Arrays.asList( ruleAction ), "", "" );
-        Rule validRule = Rule.create( null, null, "true", Arrays.asList( ruleAction ), "", "" );
+                    List.of(ruleAction), "", "" );
+        Rule validRule = Rule.create( null, null, "true", List.of(ruleAction), "", "" );
         RuleEngine ruleEngine = getRuleEngine( List.of( failingRule, validRule ) );
 
         RuleEnrollment ruleEnrollment = RuleEnrollment.create( "test_enrollment",
@@ -73,24 +73,24 @@ public class RuleEngineFunctionTest
     {
         final Date today = new Date();
         final Date yesterday = LocalDate.now().minusDays( 1 ).toDate();
-        RuleAction ruleAction = RuleActionDisplayKeyValuePair.createForFeedback(
+        RuleAction ruleAction = RuleActionText.createForFeedback(
             "test_action_content", "2 + 2" );
         Rule failingRule = Rule
             .create( null, null, "d2:daysBetween(V{enrollment_date},V{event_date}) < 0",
-                Arrays.asList( ruleAction ), "", "" );
+                    List.of(ruleAction), "", "" );
 
         RuleEnrollment ruleEnrollment = RuleEnrollment.create( "test_enrollment",
             today, today, RuleEnrollment.Status.ACTIVE, "", null,
             List.of(),
             "" );
         RuleEvent ruleEvent = RuleEvent.create( "test_event", "test_program_stage",
-            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, Arrays.asList(
-                RuleDataValue.create( new Date(), "test_program_stage", "test_data_element_one", "condition" ) ), "",
+            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, List.of(
+                        RuleDataValue.create(new Date(), "test_program_stage", "test_data_element_one", "condition")), "",
             null );
 
         RuleEvent ruleNotFailingEvent = RuleEvent.create( "test_not_failing_event", "test_program_stage",
-            RuleEvent.Status.ACTIVE, yesterday, yesterday, "", null, Arrays.asList(
-                RuleDataValue.create( new Date(), "test_program_stage", "test_data_element_one", "condition" ) ), "",
+            RuleEvent.Status.ACTIVE, yesterday, yesterday, "", null, List.of(
+                        RuleDataValue.create(new Date(), "test_program_stage", "test_data_element_one", "condition")), "",
             null );
 
         RuleEngine ruleEngine = getRuleEngine( List.of( failingRule ), ruleEnrollment,
@@ -104,7 +104,6 @@ public class RuleEngineFunctionTest
             .isEqualTo( "4" );
         assertThat( getRuleEffectsByUid( ruleEffects, "test_enrollment" ).ruleEffects() ).isNotEmpty();
 
-        ;
     }
 
     private RuleEffects getRuleEffectsByUid( List<RuleEffects> ruleEffects, String uid )
@@ -123,17 +122,17 @@ public class RuleEngineFunctionTest
     public void evaluateHasValueFunctionMustReturnTrueIfValueSpecified()
         throws Exception
     {
-        RuleAction ruleAction = RuleActionDisplayKeyValuePair.createForFeedback(
+        RuleAction ruleAction = RuleActionText.createForFeedback(
             "test_action_content", "d2:hasValue(#{test_variable})" );
         RuleVariable ruleVariable = RuleVariableCurrentEvent.create(
             "test_variable", "test_data_element", RuleValueType.TEXT, true, new ArrayList<>());
-        Rule rule = Rule.create( null, null, "true", Arrays.asList( ruleAction ), "", "" );
+        Rule rule = Rule.create( null, null, "true", List.of(ruleAction), "", "" );
 
-        RuleEngine ruleEngine = getRuleEngine( rule, Arrays.asList( ruleVariable ) );
+        RuleEngine ruleEngine = getRuleEngine( rule, List.of(ruleVariable));
 
         RuleEvent ruleEvent = RuleEvent.create( "test_event", "test_program_stage",
-            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, Arrays.asList( RuleDataValue.create(
-                new Date(), "test_program_stage", "test_data_element", "test_value" ) ), "", null);
+            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, List.of(RuleDataValue.create(
+                        new Date(), "test_program_stage", "test_data_element", "test_value")), "", null);
         List<RuleEffect> ruleEffects = ruleEngine.evaluate( ruleEvent ).call();
 
         assertThat( ruleEffects.size() ).isEqualTo( 1 );
@@ -150,17 +149,17 @@ public class RuleEngineFunctionTest
 
         List<Option> options = Arrays.asList( option1, option2 );
 
-        RuleAction ruleAction = RuleActionDisplayKeyValuePair.createForFeedback(
+        RuleAction ruleAction = RuleActionText.createForFeedback(
                 "test_action_content", "#{test_variable}" );
         RuleVariable ruleVariable = RuleVariableNewestEvent.create(
                 "test_variable", "test_data_element", RuleValueType.TEXT, USE_NAME_FOR_OPTION_SET, options);
-        Rule rule = Rule.create( null, null, "true", Arrays.asList( ruleAction ), "", "" );
+        Rule rule = Rule.create( null, null, "true", List.of(ruleAction), "", "" );
 
-        RuleEngine ruleEngine = getRuleEngine( rule, Arrays.asList( ruleVariable ) );
+        RuleEngine ruleEngine = getRuleEngine( rule, List.of(ruleVariable));
 
         RuleEvent ruleEvent = RuleEvent.create( "test_event", "test_program_stage",
-                RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, Arrays.asList( RuleDataValue.create(
-                        new Date(), "test_program_stage", "test_data_element", option1.code() ) ), "", null);
+                RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, List.of(RuleDataValue.create(
+                        new Date(), "test_program_stage", "test_data_element", option1.code())), "", null);
         List<RuleEffect> ruleEffects = ruleEngine.evaluate( ruleEvent ).call();
 
         assertThat( ruleEffects ).hasSize( 1 );
@@ -177,17 +176,17 @@ public class RuleEngineFunctionTest
 
         List<Option> options = Arrays.asList( option1, option2 );
 
-        RuleAction ruleAction = RuleActionDisplayKeyValuePair.createForFeedback(
+        RuleAction ruleAction = RuleActionText.createForFeedback(
                 "test_action_content", "#{test_variable}" );
         RuleVariable ruleVariable = RuleVariableCurrentEvent.create(
                 "test_variable", "test_data_element", RuleValueType.TEXT, USE_CODE_FOR_OPTION_SET, options);
-        Rule rule = Rule.create( null, null, "true", Arrays.asList( ruleAction ), "", "" );
+        Rule rule = Rule.create( null, null, "true", List.of(ruleAction), "", "" );
 
-        RuleEngine ruleEngine = getRuleEngine( rule, Arrays.asList( ruleVariable ) );
+        RuleEngine ruleEngine = getRuleEngine( rule, List.of(ruleVariable));
 
         RuleEvent ruleEvent = RuleEvent.create( "test_event", "test_program_stage",
-                RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, Arrays.asList( RuleDataValue.create(
-                        new Date(), "test_program_stage", "test_data_element", option2.code() ) ), "", null);
+                RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, List.of(RuleDataValue.create(
+                        new Date(), "test_program_stage", "test_data_element", option2.code())), "", null);
         List<RuleEffect> ruleEffects = ruleEngine.evaluate( ruleEvent ).call();
 
         assertThat( ruleEffects ).hasSize( 1 );
@@ -200,17 +199,17 @@ public class RuleEngineFunctionTest
     public void evaluateHasValueFunctionWithStringValue()
         throws Exception
     {
-        RuleAction ruleAction = RuleActionDisplayKeyValuePair.createForFeedback(
+        RuleAction ruleAction = RuleActionText.createForFeedback(
             "test_action_content", "d2:hasValue('test_variable')" );
         RuleVariable ruleVariable = RuleVariableCurrentEvent.create(
             "test_variable", "test_data_element", RuleValueType.TEXT, true, new ArrayList<>());
-        Rule rule = Rule.create( null, null, "true", Arrays.asList( ruleAction ), "", "" );
+        Rule rule = Rule.create( null, null, "true", List.of(ruleAction), "", "" );
 
-        RuleEngine ruleEngine = getRuleEngine( rule, Arrays.asList( ruleVariable ) );
+        RuleEngine ruleEngine = getRuleEngine( rule, List.of(ruleVariable));
 
         RuleEvent ruleEvent = RuleEvent.create( "test_event", "test_program_stage",
-            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, Arrays.asList( RuleDataValue.create(
-                new Date(), "test_program_stage", "test_data_element", "test_value" ) ), "", null);
+            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, List.of(RuleDataValue.create(
+                        new Date(), "test_program_stage", "test_data_element", "test_value")), "", null);
         List<RuleEffect> ruleEffects = ruleEngine.evaluate( ruleEvent ).call();
 
         assertThat( ruleEffects.size() ).isEqualTo( 1 );
@@ -222,13 +221,13 @@ public class RuleEngineFunctionTest
     public void evaluateHasValueFunctionMustReturnTrueIfNoValueSpecified()
         throws Exception
     {
-        RuleAction ruleAction = RuleActionDisplayKeyValuePair.createForFeedback(
+        RuleAction ruleAction = RuleActionText.createForFeedback(
             "test_action_content", "d2:hasValue(#{test_variable})" );
         RuleVariable ruleVariable = RuleVariableCurrentEvent.create(
             "test_variable", "test_data_element", RuleValueType.TEXT, true, new ArrayList<>());
-        Rule rule = Rule.create( null, null, "true", Arrays.asList( ruleAction ), "", "" );
+        Rule rule = Rule.create( null, null, "true", List.of(ruleAction), "", "" );
 
-        RuleEngine ruleEngine = getRuleEngine( rule, Arrays.asList( ruleVariable ) );
+        RuleEngine ruleEngine = getRuleEngine( rule, List.of(ruleVariable));
 
         RuleEvent ruleEvent = RuleEvent.create( "test_event", "test_program_stage",
             RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, new ArrayList<RuleDataValue>(),
@@ -244,13 +243,13 @@ public class RuleEngineFunctionTest
     public void evaluateEnvironmentVariableProgramStageName()
         throws Exception
     {
-        RuleAction ruleAction = RuleActionDisplayKeyValuePair.createForFeedback(
+        RuleAction ruleAction = RuleActionText.createForFeedback(
             "test_action_content", "V{program_stage_name}" );
         RuleVariable ruleVariable = RuleVariableCurrentEvent
             .create( "variable", "test_data_element", RuleValueType.TEXT, true, new ArrayList<>());
-        Rule rule = Rule.create( null, null, "true", Arrays.asList( ruleAction ), "", "" );
+        Rule rule = Rule.create( null, null, "true", List.of(ruleAction), "", "" );
 
-        RuleEngine ruleEngine = getRuleEngine( rule, Arrays.asList( ruleVariable ) );
+        RuleEngine ruleEngine = getRuleEngine( rule, List.of(ruleVariable));
 
         RuleEvent ruleEvent = RuleEvent.create( "test_event", "test_program_stage_id",
             RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, new ArrayList<RuleDataValue>(),
@@ -266,13 +265,13 @@ public class RuleEngineFunctionTest
     public void evaluateDaysBetweenMustReturnCorrectDiff()
         throws Exception
     {
-        RuleAction ruleAction = RuleActionDisplayKeyValuePair.createForFeedback(
+        RuleAction ruleAction = RuleActionText.createForFeedback(
             "test_action_content", "d2:daysBetween(#{test_var_one}, #{test_var_two})" );
         RuleVariable ruleVariableOne = RuleVariableCurrentEvent.create(
             "test_var_one", "test_data_element_one", RuleValueType.TEXT, true, new ArrayList<>());
         RuleVariable ruleVariableTwo = RuleVariableCurrentEvent.create(
             "test_var_two", "test_data_element_two", RuleValueType.TEXT, true, new ArrayList<>());
-        Rule rule = Rule.create( null, null, "true", Arrays.asList( ruleAction ), "", "" );
+        Rule rule = Rule.create( null, null, "true", List.of(ruleAction), "", "" );
 
         RuleEngine ruleEngine = getRuleEngine( rule, Arrays.asList( ruleVariableOne, ruleVariableTwo ) );
 
@@ -292,13 +291,13 @@ public class RuleEngineFunctionTest
     public void evaluateDaysBetweenWithSingleQuotedDateMustReturnCorrectDiff()
         throws Exception
     {
-        RuleAction ruleAction = RuleActionDisplayKeyValuePair.createForFeedback(
+        RuleAction ruleAction = RuleActionText.createForFeedback(
             "test_action_content", "d2:daysBetween(#{test_var_one}, '2018-01-01')" );
         RuleVariable ruleVariableOne = RuleVariableCurrentEvent.create(
             "test_var_one", "test_data_element_one", RuleValueType.TEXT, true, new ArrayList<>());
         RuleVariable ruleVariableTwo = RuleVariableCurrentEvent.create(
             "test_var_two", "test_data_element_two", RuleValueType.TEXT, true, new ArrayList<>());
-        Rule rule = Rule.create( null, null, "true", Arrays.asList( ruleAction ), "", "" );
+        Rule rule = Rule.create( null, null, "true", List.of(ruleAction), "", "" );
 
         RuleEngine ruleEngine = getRuleEngine( rule, Arrays.asList( ruleVariableOne, ruleVariableTwo ) );
 
@@ -323,25 +322,25 @@ public class RuleEngineFunctionTest
         Map<String, List<String>> supplementaryData = new HashMap<>();
         supplementaryData.put( "OU_GROUP_ID", members );
 
-        RuleAction ruleAction = RuleActionDisplayKeyValuePair.createForFeedback(
+        RuleAction ruleAction = RuleActionText.createForFeedback(
             "test_action_content", "d2:inOrgUnitGroup(#{test_var_one})" );
         RuleVariable ruleVariableOne = RuleVariableCurrentEvent.create(
             "test_var_one", "test_data_element_one", RuleValueType.TEXT, true, new ArrayList<>());
 
-        Rule rule = Rule.create( null, null, "true", Arrays.asList( ruleAction ), "", "" );
+        Rule rule = Rule.create( null, null, "true", List.of(ruleAction), "", "" );
 
         RuleEngine ruleEngine = RuleEngineContext
             .builder()
-            .rules( Arrays.asList( rule ) )
-            .ruleVariables( Arrays.asList( ruleVariableOne ) )
+            .rules(List.of(rule))
+            .ruleVariables(List.of(ruleVariableOne))
             .supplementaryData( supplementaryData )
             .constantsValue( new HashMap<String, String>() )
             .build().toEngineBuilder().triggerEnvironment( TriggerEnvironment.SERVER )
             .build();
 
         RuleEvent ruleEvent = RuleEvent.create( "test_event", "test_program_stage",
-            RuleEvent.Status.ACTIVE, new Date(), new Date(), "location1", null, Arrays.asList(
-                RuleDataValue.create( new Date(), "test_program_stage", "test_data_element_one", "OU_GROUP_ID" ) ),
+            RuleEvent.Status.ACTIVE, new Date(), new Date(), "location1", null, List.of(
+                        RuleDataValue.create(new Date(), "test_program_stage", "test_data_element_one", "OU_GROUP_ID")),
             "", null);
 
         List<RuleEffect> ruleEffects = ruleEngine.evaluate( ruleEvent ).call();
@@ -361,25 +360,25 @@ public class RuleEngineFunctionTest
         Map<String, List<String>> supplementaryData = new HashMap<>();
         supplementaryData.put( "OU_GROUP_ID", members );
 
-        RuleAction ruleAction = RuleActionDisplayKeyValuePair.createForFeedback(
+        RuleAction ruleAction = RuleActionText.createForFeedback(
             "test_action_content", "d2:inOrgUnitGroup('OU_GROUP_ID')" );
         RuleVariable ruleVariableOne = RuleVariableCurrentEvent.create(
             "test_var_one", "test_data_element_one", RuleValueType.TEXT, true, new ArrayList<>());
 
-        Rule rule = Rule.create( null, null, "true", Arrays.asList( ruleAction ), "", "" );
+        Rule rule = Rule.create( null, null, "true", List.of(ruleAction), "", "" );
 
         RuleEngine ruleEngine = RuleEngineContext
             .builder()
-            .rules( Arrays.asList( rule ) )
-            .ruleVariables( Arrays.asList( ruleVariableOne ) )
+            .rules(List.of(rule))
+            .ruleVariables(List.of(ruleVariableOne))
             .supplementaryData( supplementaryData )
             .constantsValue( new HashMap<String, String>() )
             .build().toEngineBuilder().triggerEnvironment( TriggerEnvironment.SERVER )
             .build();
 
         RuleEvent ruleEvent = RuleEvent.create( "test_event", "test_program_stage",
-            RuleEvent.Status.ACTIVE, new Date(), new Date(), "location1", null, Arrays.asList(
-                RuleDataValue.create( new Date(), "test_program_stage", "test_data_element_one", "OU_GROUP_ID" ) ),
+            RuleEvent.Status.ACTIVE, new Date(), new Date(), "location1", null, List.of(
+                        RuleDataValue.create(new Date(), "test_program_stage", "test_data_element_one", "OU_GROUP_ID")),
             "", null);
 
         List<RuleEffect> ruleEffects = ruleEngine.evaluate( ruleEvent ).call();
@@ -398,25 +397,25 @@ public class RuleEngineFunctionTest
         Map<String, List<String>> supplementaryData = new HashMap<>();
         supplementaryData.put( "USER", roles );
 
-        RuleAction ruleAction = RuleActionDisplayKeyValuePair.createForFeedback(
+        RuleAction ruleAction = RuleActionText.createForFeedback(
             "test_action_content", "d2:hasUserRole(#{test_var_one})" );
         RuleVariable ruleVariableOne = RuleVariableCurrentEvent.create(
             "test_var_one", "test_data_element_one", RuleValueType.TEXT, true, new ArrayList<>());
 
-        Rule rule = Rule.create( null, null, "true", Arrays.asList( ruleAction ), "", "" );
+        Rule rule = Rule.create( null, null, "true", List.of(ruleAction), "", "" );
 
         RuleEngine ruleEngine = RuleEngineContext
             .builder()
-            .rules( Arrays.asList( rule ) )
-            .ruleVariables( Arrays.asList( ruleVariableOne ) )
+            .rules(List.of(rule))
+            .ruleVariables(List.of(ruleVariableOne))
             .supplementaryData( supplementaryData )
             .constantsValue( new HashMap<String, String>() )
             .build().toEngineBuilder().triggerEnvironment( TriggerEnvironment.SERVER )
             .build();
 
         RuleEvent ruleEvent = RuleEvent.create( "test_event", "test_program_stage",
-            RuleEvent.Status.ACTIVE, new Date(), new Date(), "location1", null, Arrays.asList(
-                RuleDataValue.create( new Date(), "test_program_stage", "test_data_element_one", "role1" ) ), "", null);
+            RuleEvent.Status.ACTIVE, new Date(), new Date(), "location1", null, List.of(
+                        RuleDataValue.create(new Date(), "test_program_stage", "test_data_element_one", "role1")), "", null);
 
         List<RuleEffect> ruleEffects = ruleEngine.evaluate( ruleEvent ).call();
 
@@ -435,25 +434,25 @@ public class RuleEngineFunctionTest
         Map<String, List<String>> supplementaryData = new HashMap<>();
         supplementaryData.put( "USER", roles );
 
-        RuleAction ruleAction = RuleActionDisplayKeyValuePair.createForFeedback(
+        RuleAction ruleAction = RuleActionText.createForFeedback(
             "test_action_content", "d2:hasUserRole('role1')" );
         RuleVariable ruleVariableOne = RuleVariableCurrentEvent.create(
             "test_var_one", "test_data_element_one", RuleValueType.TEXT, true, new ArrayList<>());
 
-        Rule rule = Rule.create( null, null, "true", Arrays.asList( ruleAction ), "", "" );
+        Rule rule = Rule.create( null, null, "true", List.of(ruleAction), "", "" );
 
         RuleEngine ruleEngine = RuleEngineContext
             .builder()
-            .rules( Arrays.asList( rule ) )
-            .ruleVariables( Arrays.asList( ruleVariableOne ) )
+            .rules(List.of(rule))
+            .ruleVariables(List.of(ruleVariableOne))
             .supplementaryData( supplementaryData )
             .constantsValue( new HashMap<String, String>() )
             .build().toEngineBuilder().triggerEnvironment( TriggerEnvironment.SERVER )
             .build();
 
         RuleEvent ruleEvent = RuleEvent.create( "test_event", "test_program_stage",
-            RuleEvent.Status.ACTIVE, new Date(), new Date(), "location1", null, Arrays.asList(
-                RuleDataValue.create( new Date(), "test_program_stage", "test_data_element_one", "role1" ) ), "", null);
+            RuleEvent.Status.ACTIVE, new Date(), new Date(), "location1", null, List.of(
+                        RuleDataValue.create(new Date(), "test_program_stage", "test_data_element_one", "role1")), "", null);
 
         List<RuleEffect> ruleEffects = ruleEngine.evaluate( ruleEvent ).call();
 
@@ -466,13 +465,13 @@ public class RuleEngineFunctionTest
     public void evaluateD2AddDays()
         throws Exception
     {
-        RuleAction ruleAction = RuleActionDisplayKeyValuePair.createForFeedback(
+        RuleAction ruleAction = RuleActionText.createForFeedback(
             "test_action_content", "d2:addDays(#{test_var_one}, #{test_var_two})" );
         RuleVariable ruleVariableOne = RuleVariableCurrentEvent.create(
             "test_var_one", "test_data_element_one", RuleValueType.TEXT, true, new ArrayList<>());
         RuleVariable ruleVariableTwo = RuleVariableCurrentEvent.create(
             "test_var_two", "test_data_element_two", RuleValueType.TEXT, true, new ArrayList<>());
-        Rule rule = Rule.create( null, null, "true", Arrays.asList( ruleAction ), "", "" );
+        Rule rule = Rule.create( null, null, "true", List.of(ruleAction), "", "" );
 
         RuleEngine ruleEngine = getRuleEngine( rule, Arrays.asList( ruleVariableOne, ruleVariableTwo ) );
 
@@ -502,24 +501,24 @@ public class RuleEngineFunctionTest
     public void evaluateD2CountIfValue()
         throws Exception
     {
-        RuleAction ruleAction = RuleActionDisplayKeyValuePair.createForFeedback(
+        RuleAction ruleAction = RuleActionText.createForFeedback(
             "test_action_content", "d2:countIfValue(#{test_var_one}, 'condition')" );
         RuleVariable ruleVariableOne = RuleVariableNewestEvent.create(
             "test_var_one", "test_data_element_one", RuleValueType.TEXT, true, new ArrayList<>());
 
-        Rule rule = Rule.create( null, null, "true", Arrays.asList( ruleAction ), "", "" );
+        Rule rule = Rule.create( null, null, "true", List.of(ruleAction), "", "" );
 
-        RuleEngine.Builder ruleEngineBuilder = getRuleEngineBuilder( rule, Arrays.asList( ruleVariableOne ) );
+        RuleEngine.Builder ruleEngineBuilder = getRuleEngineBuilder( rule, List.of(ruleVariableOne));
 
         RuleEvent ruleEvent = RuleEvent.create( "test_event", "test_program_stage",
-            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, Arrays.asList(
-                RuleDataValue.create( new Date(), "test_program_stage", "test_data_element_one", "condition" ) ), "", null);
+            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, List.of(
+                        RuleDataValue.create(new Date(), "test_program_stage", "test_data_element_one", "condition")), "", null);
         RuleEvent ruleEvent2 = RuleEvent.create( "test_event2", "test_program_stage2",
-            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, Arrays.asList(
-                RuleDataValue.create( new Date(), "test_program_stage", "test_data_element_one", "condition2" ) ), "", null);
+            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, List.of(
+                        RuleDataValue.create(new Date(), "test_program_stage", "test_data_element_one", "condition2")), "", null);
         RuleEvent ruleEvent3 = RuleEvent.create( "test_event3", "test_program_stage3",
-            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, Arrays.asList(
-                RuleDataValue.create( new Date(), "test_program_stage", "test_data_element_one", "condition" ) ), "", null);
+            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, List.of(
+                        RuleDataValue.create(new Date(), "test_program_stage", "test_data_element_one", "condition")), "", null);
 
         ruleEngineBuilder.events( Arrays.asList( ruleEvent2, ruleEvent3 ) );
 
@@ -527,7 +526,7 @@ public class RuleEngineFunctionTest
 
         assertThat( ruleEffects.size() ).isEqualTo( 1 );
         assertThat( ruleEffects.get( 0 ).ruleAction() ).isEqualTo( ruleAction );
-        assertTrue( ruleEffects.get( 0 ).data().equals( "2" ) );
+        assertEquals("2", ruleEffects.get(0).data());
     }
 
     @Test
@@ -535,24 +534,24 @@ public class RuleEngineFunctionTest
     public void evaluateD2CountIfValueWithStringValue()
         throws Exception
     {
-        RuleAction ruleAction = RuleActionDisplayKeyValuePair.createForFeedback(
+        RuleAction ruleAction = RuleActionText.createForFeedback(
             "test_action_content", "d2:countIfValue('test_var_one', 'condition')" );
         RuleVariable ruleVariableOne = RuleVariableNewestEvent.create(
             "test_var_one", "test_data_element_one", RuleValueType.TEXT, true, new ArrayList<>());
 
-        Rule rule = Rule.create( null, null, "true", Arrays.asList( ruleAction ), "", "" );
+        Rule rule = Rule.create( null, null, "true", List.of(ruleAction), "", "" );
 
-        RuleEngine.Builder ruleEngineBuilder = getRuleEngineBuilder( rule, Arrays.asList( ruleVariableOne ) );
+        RuleEngine.Builder ruleEngineBuilder = getRuleEngineBuilder( rule, List.of(ruleVariableOne));
 
         RuleEvent ruleEvent = RuleEvent.create( "test_event", "test_program_stage",
-            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, Arrays.asList(
-                RuleDataValue.create( new Date(), "test_program_stage", "test_data_element_one", "condition" ) ), "", null);
+            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, List.of(
+                        RuleDataValue.create(new Date(), "test_program_stage", "test_data_element_one", "condition")), "", null);
         RuleEvent ruleEvent2 = RuleEvent.create( "test_event2", "test_program_stage2",
-            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, Arrays.asList(
-                RuleDataValue.create( new Date(), "test_program_stage", "test_data_element_one", "condition2" ) ), "", null);
+            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, List.of(
+                        RuleDataValue.create(new Date(), "test_program_stage", "test_data_element_one", "condition2")), "", null);
         RuleEvent ruleEvent3 = RuleEvent.create( "test_event3", "test_program_stage3",
-            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, Arrays.asList(
-                RuleDataValue.create( new Date(), "test_program_stage", "test_data_element_one", "condition" ) ), "", null);
+            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, List.of(
+                        RuleDataValue.create(new Date(), "test_program_stage", "test_data_element_one", "condition")), "", null);
 
         ruleEngineBuilder.events( Arrays.asList( ruleEvent2, ruleEvent3 ) );
 
@@ -560,14 +559,14 @@ public class RuleEngineFunctionTest
 
         assertThat( ruleEffects.size() ).isEqualTo( 1 );
         assertThat( ruleEffects.get( 0 ).ruleAction() ).isEqualTo( ruleAction );
-        assertTrue( ruleEffects.get( 0 ).data().equals( "2" ) );
+        assertEquals("2", ruleEffects.get(0).data());
     }
 
     @Test
     public void evaluateD2Count()
         throws Exception
     {
-        RuleAction ruleAction = RuleActionDisplayKeyValuePair.createForFeedback(
+        RuleAction ruleAction = RuleActionText.createForFeedback(
             "test_action_content", "d2:count(#{test_var_one})" );
         RuleVariable ruleVariableOne = RuleVariableNewestEvent.create(
             "test_var_one", "test_data_element_one", RuleValueType.TEXT, true, new ArrayList<>());
@@ -575,23 +574,23 @@ public class RuleEngineFunctionTest
         RuleVariable ruleVariableTwo = RuleVariableNewestEvent.create(
             "test_var_two", "test_data_element_two", RuleValueType.TEXT, true, new ArrayList<>());
 
-        Rule rule = Rule.create( null, null, "true", Arrays.asList( ruleAction ), "", "" );
+        Rule rule = Rule.create( null, null, "true", List.of(ruleAction), "", "" );
 
-        RuleEngine.Builder ruleEngineBuilder = getRuleEngineBuilder( rule, Arrays.asList( ruleVariableOne ) );
+        RuleEngine.Builder ruleEngineBuilder = getRuleEngineBuilder( rule, List.of(ruleVariableOne));
 
         RuleEvent ruleEvent = RuleEvent.create( "test_event", "test_program_stage",
-            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, Arrays.asList(
-                RuleDataValue.create( new Date(), "test_program_stage", "test_data_element_one", "condition" ) ), "", null);
+            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, List.of(
+                        RuleDataValue.create(new Date(), "test_program_stage", "test_data_element_one", "condition")), "", null);
         RuleEvent ruleEvent2 = RuleEvent.create( "test_event2", "test_program_stage2",
-            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, Arrays.asList(
-                RuleDataValue.create( new Date(), "test_program_stage", "test_data_element_one", "condition2" ) ), "", null);
+            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, List.of(
+                        RuleDataValue.create(new Date(), "test_program_stage", "test_data_element_one", "condition2")), "", null);
         RuleEvent ruleEvent3 = RuleEvent.create( "test_event3", "test_program_stage3",
-            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, Arrays.asList(
-                RuleDataValue.create( new Date(), "test_program_stage", "test_data_element_one", "condition" ) ), "", null);
+            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, List.of(
+                        RuleDataValue.create(new Date(), "test_program_stage", "test_data_element_one", "condition")), "", null);
 
         RuleEvent ruleEvent4 = RuleEvent.create( "test_event3", "test_program_stage3",
-            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, Arrays.asList(
-                RuleDataValue.create( new Date(), "test_program_stage", "test_data_element_two", "condition" ) ), "", null);
+            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, List.of(
+                        RuleDataValue.create(new Date(), "test_program_stage", "test_data_element_two", "condition")), "", null);
 
         ruleEngineBuilder.events( Arrays.asList( ruleEvent2, ruleEvent3, ruleEvent4 ) );
 
@@ -605,24 +604,24 @@ public class RuleEngineFunctionTest
     @Test
     public void evaluateLogicalAnd() throws Exception
     {
-        RuleAction ruleAction = RuleActionDisplayKeyValuePair.createForFeedback(
+        RuleAction ruleAction = RuleActionText.createForFeedback(
                 "test_action_content", "d2:count(#{test_var_one})" );
         RuleVariable ruleVariableOne = RuleVariableNewestEvent.create(
                 "test_var_one", "test_data_element_one", RuleValueType.TEXT, true, new ArrayList<>());
 
         Rule rule = Rule.create( null, null, "d2:hasValue(V{current_date}) && d2:count(#{test_var_one}) > 0",
-            Arrays.asList( ruleAction ), "", "" );
+                List.of(ruleAction), "", "" );
 
-        RuleEngine.Builder ruleEngineBuilder = getRuleEngineBuilder( rule, Arrays.asList( ruleVariableOne ) );
+        RuleEngine.Builder ruleEngineBuilder = getRuleEngineBuilder( rule, List.of(ruleVariableOne));
 
         RuleEvent ruleEvent = RuleEvent.create( "test_event", "test_program_stage",
-                RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, Arrays.asList(
-                        RuleDataValue.create( new Date(), "test_program_stage", "test_data_element_one", "condition" ) ), "", null);
+                RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, List.of(
+                        RuleDataValue.create(new Date(), "test_program_stage", "test_data_element_one", "condition")), "", null);
         RuleEvent ruleEvent2 = RuleEvent.create( "test_event2", "test_program_stage2",
-                RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, Arrays.asList(
-                        RuleDataValue.create( new Date(), "test_program_stage", "test_data_element_one", "condition2" ) ), "", null);
+                RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, List.of(
+                        RuleDataValue.create(new Date(), "test_program_stage", "test_data_element_one", "condition2")), "", null);
 
-        ruleEngineBuilder.events( Arrays.asList( ruleEvent2 ) );
+        ruleEngineBuilder.events(List.of(ruleEvent2));
 
         List<RuleEffect> ruleEffects = ruleEngineBuilder.build().evaluate( ruleEvent ).call();
 
@@ -634,24 +633,24 @@ public class RuleEngineFunctionTest
     @Test
     public void evaluateLogicalOr() throws Exception
     {
-        RuleAction ruleAction = RuleActionDisplayKeyValuePair.createForFeedback(
+        RuleAction ruleAction = RuleActionText.createForFeedback(
                 "test_action_content", "d2:count(#{test_var_one})" );
         RuleVariable ruleVariableOne = RuleVariableNewestEvent.create(
                 "test_var_one", "test_data_element_one", RuleValueType.TEXT, true, new ArrayList<>());
 
         Rule rule = Rule.create( null, null, "d2:hasValue(V{current_date}) || d2:count(#{test_var_one}) > 0",
-            Arrays.asList( ruleAction ), "", "" );
+                List.of(ruleAction), "", "" );
 
-        RuleEngine.Builder ruleEngineBuilder = getRuleEngineBuilder( rule, Arrays.asList( ruleVariableOne ) );
+        RuleEngine.Builder ruleEngineBuilder = getRuleEngineBuilder( rule, List.of(ruleVariableOne));
 
         RuleEvent ruleEvent = RuleEvent.create( "test_event", "test_program_stage",
-                RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, Arrays.asList(
-                        RuleDataValue.create( new Date(), "test_program_stage", "test_data_element_one", "condition" ) ), "", null);
+                RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, List.of(
+                        RuleDataValue.create(new Date(), "test_program_stage", "test_data_element_one", "condition")), "", null);
         RuleEvent ruleEvent2 = RuleEvent.create( "test_event2", "test_program_stage2",
-                RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, Arrays.asList(
-                        RuleDataValue.create( new Date(), "test_program_stage", "test_data_element_one", "condition2" ) ), "", null);
+                RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, List.of(
+                        RuleDataValue.create(new Date(), "test_program_stage", "test_data_element_one", "condition2")), "", null);
 
-        ruleEngineBuilder.events( Arrays.asList( ruleEvent2 ) );
+        ruleEngineBuilder.events(List.of(ruleEvent2));
 
         List<RuleEffect> ruleEffects = ruleEngineBuilder.build().evaluate( ruleEvent ).call();
 
@@ -665,7 +664,7 @@ public class RuleEngineFunctionTest
     public void evaluateD2CountWithStringValue()
         throws Exception
     {
-        RuleAction ruleAction = RuleActionDisplayKeyValuePair.createForFeedback(
+        RuleAction ruleAction = RuleActionText.createForFeedback(
             "test_action_content", "d2:count('test_var_one')" );
         RuleVariable ruleVariableOne = RuleVariableNewestEvent.create(
             "test_var_one", "test_data_element_one", RuleValueType.TEXT, true, new ArrayList<>());
@@ -673,23 +672,23 @@ public class RuleEngineFunctionTest
         RuleVariable ruleVariableTwo = RuleVariableNewestEvent.create(
             "test_var_two", "test_data_element_two", RuleValueType.TEXT, true, new ArrayList<>());
 
-        Rule rule = Rule.create( null, null, "true", Arrays.asList( ruleAction ), "", "" );
+        Rule rule = Rule.create( null, null, "true", List.of(ruleAction), "", "" );
 
-        RuleEngine.Builder ruleEngineBuilder = getRuleEngineBuilder( rule, Arrays.asList( ruleVariableOne ) );
+        RuleEngine.Builder ruleEngineBuilder = getRuleEngineBuilder( rule, List.of(ruleVariableOne));
 
         RuleEvent ruleEvent = RuleEvent.create( "test_event", "test_program_stage",
-            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, Arrays.asList(
-                RuleDataValue.create( new Date(), "test_program_stage", "test_data_element_one", "condition" ) ), "", null);
+            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, List.of(
+                        RuleDataValue.create(new Date(), "test_program_stage", "test_data_element_one", "condition")), "", null);
         RuleEvent ruleEvent2 = RuleEvent.create( "test_event2", "test_program_stage2",
-            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, Arrays.asList(
-                RuleDataValue.create( new Date(), "test_program_stage", "test_data_element_one", "condition2" ) ), "", null);
+            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, List.of(
+                        RuleDataValue.create(new Date(), "test_program_stage", "test_data_element_one", "condition2")), "", null);
         RuleEvent ruleEvent3 = RuleEvent.create( "test_event3", "test_program_stage3",
-            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, Arrays.asList(
-                RuleDataValue.create( new Date(), "test_program_stage", "test_data_element_one", "condition" ) ), "", null);
+            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, List.of(
+                        RuleDataValue.create(new Date(), "test_program_stage", "test_data_element_one", "condition")), "", null);
 
         RuleEvent ruleEvent4 = RuleEvent.create( "test_event3", "test_program_stage3",
-            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, Arrays.asList(
-                RuleDataValue.create( new Date(), "test_program_stage", "test_data_element_two", "condition" ) ), "", null);
+            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, List.of(
+                        RuleDataValue.create(new Date(), "test_program_stage", "test_data_element_two", "condition")), "", null);
 
         ruleEngineBuilder.events( Arrays.asList( ruleEvent2, ruleEvent3, ruleEvent4 ) );
 
@@ -704,18 +703,18 @@ public class RuleEngineFunctionTest
     public void evaluateD2Round()
         throws Exception
     {
-        RuleAction ruleAction1 = RuleActionDisplayKeyValuePair.createForFeedback(
+        RuleAction ruleAction1 = RuleActionText.createForFeedback(
             "test_action_content", "d2:round(#{test_var_one})" );
         RuleVariable ruleVariableOne = RuleVariableNewestEvent.create(
             "test_var_one", "test_data_element_one", RuleValueType.NUMERIC, true, new ArrayList<>());
 
-        Rule rule = Rule.create( null, null, "true", Arrays.asList( ruleAction1 ), "", "" );
+        Rule rule = Rule.create( null, null, "true", List.of(ruleAction1), "", "" );
 
-        RuleEngine.Builder ruleEngineBuilder = getRuleEngineBuilder( rule, Arrays.asList( ruleVariableOne ) );
+        RuleEngine.Builder ruleEngineBuilder = getRuleEngineBuilder( rule, List.of(ruleVariableOne));
 
         RuleEvent ruleEvent = RuleEvent.create( "test_event", "test_program_stage",
-            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, Arrays.asList(
-                RuleDataValue.create( new Date(), "test_program_stage", "test_data_element_one", "2.6" ) ), "", null);
+            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, List.of(
+                        RuleDataValue.create(new Date(), "test_program_stage", "test_data_element_one", "2.6")), "", null);
 
         List<RuleEffect> ruleEffects = ruleEngineBuilder.build().evaluate( ruleEvent ).call();
 
@@ -728,18 +727,18 @@ public class RuleEngineFunctionTest
     public void evaluateD2Modulus()
         throws Exception
     {
-        RuleAction ruleAction = RuleActionDisplayKeyValuePair.createForFeedback(
+        RuleAction ruleAction = RuleActionText.createForFeedback(
             "test_action_content", "d2:modulus(#{test_var_one}, 2)" );
         RuleVariable ruleVariableOne = RuleVariableNewestEvent.create(
             "test_var_one", "test_data_element_one", RuleValueType.NUMERIC, true, new ArrayList<>());
 
-        Rule rule = Rule.create( null, null, "true", Arrays.asList( ruleAction ), "", "" );
+        Rule rule = Rule.create( null, null, "true", List.of(ruleAction), "", "" );
 
-        RuleEngine.Builder ruleEngineBuilder = getRuleEngineBuilder( rule, Arrays.asList( ruleVariableOne ) );
+        RuleEngine.Builder ruleEngineBuilder = getRuleEngineBuilder( rule, List.of(ruleVariableOne));
 
         RuleEvent ruleEvent = RuleEvent.create( "test_event", "test_program_stage",
-            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, Arrays.asList(
-                RuleDataValue.create( new Date(), "test_program_stage", "test_data_element_one", "2.6" ) ), "", null);
+            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, List.of(
+                        RuleDataValue.create(new Date(), "test_program_stage", "test_data_element_one", "2.6")), "", null);
 
         List<RuleEffect> ruleEffects = ruleEngineBuilder.build().evaluate( ruleEvent ).call();
 
@@ -752,18 +751,18 @@ public class RuleEngineFunctionTest
     public void evaluateD2SubString()
         throws Exception
     {
-        RuleAction ruleAction = RuleActionDisplayKeyValuePair.createForFeedback(
+        RuleAction ruleAction = RuleActionText.createForFeedback(
             "test_action_content", "d2:substring(#{test_var_one}, 1, 3)" );
         RuleVariable ruleVariableOne = RuleVariableNewestEvent.create(
             "test_var_one", "test_data_element_one", RuleValueType.TEXT, true, new ArrayList<>());
 
-        Rule rule = Rule.create( null, null, "true", Arrays.asList( ruleAction ), "", "" );
+        Rule rule = Rule.create( null, null, "true", List.of(ruleAction), "", "" );
 
-        RuleEngine.Builder ruleEngineBuilder = getRuleEngineBuilder( rule, Arrays.asList( ruleVariableOne ) );
+        RuleEngine.Builder ruleEngineBuilder = getRuleEngineBuilder( rule, List.of(ruleVariableOne));
 
         RuleEvent ruleEvent = RuleEvent.create( "test_event", "test_program_stage",
-            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, Arrays.asList(
-                RuleDataValue.create( new Date(), "test_program_stage", "test_data_element_one", "ABCD" ) ), "", null);
+            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, List.of(
+                        RuleDataValue.create(new Date(), "test_program_stage", "test_data_element_one", "ABCD")), "", null);
 
         List<RuleEffect> ruleEffects = ruleEngineBuilder.build().evaluate( ruleEvent ).call();
 
@@ -776,13 +775,13 @@ public class RuleEngineFunctionTest
     public void evaluateD2WeeksBetween()
         throws Exception
     {
-        RuleAction ruleAction = RuleActionDisplayKeyValuePair.createForFeedback(
+        RuleAction ruleAction = RuleActionText.createForFeedback(
             "test_action_content", "d2:weeksBetween(#{test_var_one}, #{test_var_two})" );
         RuleVariable ruleVariableOne = RuleVariableNewestEvent.create(
             "test_var_one", "test_data_element_one", RuleValueType.TEXT, true, new ArrayList<>());
         RuleVariable ruleVariableTwo = RuleVariableNewestEvent.create(
             "test_var_two", "test_data_element_two", RuleValueType.TEXT, true, new ArrayList<>());
-        Rule rule = Rule.create( null, null, "true", Arrays.asList( ruleAction ), "", "" );
+        Rule rule = Rule.create( null, null, "true", List.of(ruleAction), "", "" );
 
         RuleEngine.Builder ruleEngineBuilder = getRuleEngineBuilder( rule,
             Arrays.asList( ruleVariableOne, ruleVariableTwo ) );
@@ -803,13 +802,13 @@ public class RuleEngineFunctionTest
     public void evaluateD2MonthsBetween()
         throws Exception
     {
-        RuleAction ruleAction = RuleActionDisplayKeyValuePair.createForFeedback(
+        RuleAction ruleAction = RuleActionText.createForFeedback(
             "test_action_content", "d2:monthsBetween(#{test_var_one}, #{test_var_two})" );
         RuleVariable ruleVariableOne = RuleVariableNewestEvent.create(
             "test_var_one", "test_data_element_one", RuleValueType.TEXT, true, new ArrayList<>());
         RuleVariable ruleVariableTwo = RuleVariableNewestEvent.create(
             "test_var_two", "test_data_element_two", RuleValueType.TEXT, true, new ArrayList<>());
-        Rule rule = Rule.create( null, null, "true", Arrays.asList( ruleAction ), "", "" );
+        Rule rule = Rule.create( null, null, "true", List.of(ruleAction), "", "" );
 
         RuleEngine.Builder ruleEngineBuilder = getRuleEngineBuilder( rule,
             Arrays.asList( ruleVariableOne, ruleVariableTwo ) );
@@ -830,14 +829,14 @@ public class RuleEngineFunctionTest
     public void evaluateD2YearsBetween()
         throws Exception
     {
-        RuleAction ruleAction = RuleActionDisplayKeyValuePair.createForFeedback(
+        RuleAction ruleAction = RuleActionText.createForFeedback(
             "test_action_content", "d2:yearsBetween(#{test_var_one}, #{test_var_two})" );
         RuleVariable ruleVariableOne = RuleVariableNewestEvent.create(
             "test_var_one", "test_data_element_one", RuleValueType.TEXT, true, new ArrayList<>());
         RuleVariable ruleVariableTwo = RuleVariableNewestEvent.create(
             "test_var_two", "test_data_element_two", RuleValueType.TEXT, true, new ArrayList<>());
         Rule rule = Rule
-            .create( null, null, "d2:yearsBetween('2016-01-01', '2018-09-01') == 2", Arrays.asList( ruleAction ), "",
+            .create( null, null, "d2:yearsBetween('2016-01-01', '2018-09-01') == 2", List.of(ruleAction), "",
                 "" );
 
         RuleEngine.Builder ruleEngineBuilder = getRuleEngineBuilder( rule,
@@ -859,7 +858,7 @@ public class RuleEngineFunctionTest
     public void evaluateD2Zpvc()
         throws Exception
     {
-        RuleAction ruleAction = RuleActionDisplayText.createForFeedback(
+        RuleAction ruleAction = RuleActionText.createForFeedback(
             "test_action_content", "d2:zpvc( '1', '0', '-1' )" );
         RuleVariable ruleVariableOne = RuleVariableNewestEvent.create(
             "test_var_one", "test_data_element_one", RuleValueType.NUMERIC, true, new ArrayList<>());
@@ -867,13 +866,13 @@ public class RuleEngineFunctionTest
             "test_var_two", "test_data_element_two", RuleValueType.NUMERIC, true, new ArrayList<>());
         RuleVariable ruleVariableThree = RuleVariableNewestEvent.create(
             "test_var_three", "test_data_element_two", RuleValueType.NUMERIC, true, new ArrayList<>());
-        Rule rule = Rule.create( null, null, "true", Arrays.asList( ruleAction ), "", "" );
+        Rule rule = Rule.create( null, null, "true", Collections.singletonList(ruleAction), "", "" );
 
         RuleEngine.Builder ruleEngineBuilder = getRuleEngineBuilder( rule,
             Arrays.asList( ruleVariableOne, ruleVariableTwo ) );
 
         RuleEvent ruleEvent = RuleEvent.create( "test_event", "test_program_stage",
-            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, Arrays.<RuleDataValue>asList(), "", null);
+            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, List.of(), "", null);
 
         List<RuleEffect> ruleEffects = ruleEngineBuilder.build().evaluate( ruleEvent ).call();
 
@@ -886,15 +885,15 @@ public class RuleEngineFunctionTest
     public void evaluateD2Zing()
         throws Exception
     {
-        RuleAction ruleAction = RuleActionDisplayText.createForFeedback(
+        RuleAction ruleAction = RuleActionText.createForFeedback(
             "test_action_content", "d2:zing( '-1' )" );
 
-        Rule rule = Rule.create( null, null, "true", Arrays.asList( ruleAction ), "", "" );
+        Rule rule = Rule.create( null, null, "true", Collections.singletonList(ruleAction), "", "" );
 
-        RuleEngine.Builder ruleEngineBuilder = getRuleEngineBuilder( rule, Arrays.<RuleVariable>asList() );
+        RuleEngine.Builder ruleEngineBuilder = getRuleEngineBuilder( rule, List.of());
 
         RuleEvent ruleEvent = RuleEvent.create( "test_event", "test_program_stage",
-            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, Arrays.<RuleDataValue>asList(), "", null);
+            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, List.of(), "", null);
 
         List<RuleEffect> ruleEffects = ruleEngineBuilder.build().evaluate( ruleEvent ).call();
 
@@ -907,15 +906,15 @@ public class RuleEngineFunctionTest
     public void evaluateD2Oizp()
         throws Exception
     {
-        RuleAction ruleAction = RuleActionDisplayText.createForFeedback(
+        RuleAction ruleAction = RuleActionText.createForFeedback(
             "test_action_content", "d2:oizp( '0' )" );
 
-        Rule rule = Rule.create( null, null, "true", Arrays.asList( ruleAction ), "", "" );
+        Rule rule = Rule.create( null, null, "true", Collections.singletonList(ruleAction), "", "" );
 
-        RuleEngine.Builder ruleEngineBuilder = getRuleEngineBuilder( rule, Arrays.<RuleVariable>asList() );
+        RuleEngine.Builder ruleEngineBuilder = getRuleEngineBuilder( rule, List.of());
 
         RuleEvent ruleEvent = RuleEvent.create( "test_event", "test_program_stage",
-            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, Arrays.<RuleDataValue>asList(), "", null);
+            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, List.of(), "", null);
 
         List<RuleEffect> ruleEffects = ruleEngineBuilder.build().evaluate( ruleEvent ).call();
 
@@ -928,26 +927,26 @@ public class RuleEngineFunctionTest
     public void evaluateD2CountIfZeroPos()
         throws Exception
     {
-        RuleAction ruleAction = RuleActionDisplayText.createForFeedback(
+        RuleAction ruleAction = RuleActionText.createForFeedback(
             "test_action_content", "d2:countIfZeroPos(#{test_var_one})" );
         RuleVariable ruleVariableOne = RuleVariableNewestEvent.create(
             "test_var_one", "test_data_element_one", RuleValueType.NUMERIC, true, new ArrayList<>());
 
-        Rule rule = Rule.create( null, null, "true", Arrays.asList( ruleAction ), "", "" );
+        Rule rule = Rule.create( null, null, "true", Collections.singletonList(ruleAction), "", "" );
 
-        RuleEngine.Builder ruleEngineBuilder = getRuleEngineBuilder( rule, Arrays.asList( ruleVariableOne ) );
+        RuleEngine.Builder ruleEngineBuilder = getRuleEngineBuilder( rule, List.of(ruleVariableOne));
 
         RuleEvent ruleEvent = RuleEvent.create( "test_event", "test_program_stage",
-            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, Arrays.asList(
-                RuleDataValue.create( new Date(), "test_program_stage", "test_data_element_one", "0" ) ), "", null);
+            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, List.of(
+                        RuleDataValue.create(new Date(), "test_program_stage", "test_data_element_one", "0")), "", null);
 
         RuleEvent ruleEvent1 = RuleEvent.create( "test_event1", "test_program_stage",
-            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, Arrays.asList(
-                RuleDataValue.create( new Date(), "test_program_stage", "test_data_element_one", "1" ) ), "", null);
+            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, List.of(
+                        RuleDataValue.create(new Date(), "test_program_stage", "test_data_element_one", "1")), "", null);
 
         RuleEvent ruleEvent2 = RuleEvent.create( "test_event1", "test_program_stage",
-            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, Arrays.asList(
-                RuleDataValue.create( new Date(), "test_program_stage", "test_data_element_one", "-3" ) ), "", null);
+            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, List.of(
+                        RuleDataValue.create(new Date(), "test_program_stage", "test_data_element_one", "-3")), "", null);
 
         List<RuleEffect> ruleEffects = ruleEngineBuilder.events( Arrays.asList( ruleEvent1, ruleEvent2 ) ).build()
             .evaluate( ruleEvent ).call();
@@ -962,26 +961,26 @@ public class RuleEngineFunctionTest
     public void evaluateD2CountIfZeroPosWithStringValue()
         throws Exception
     {
-        RuleAction ruleAction = RuleActionDisplayText.createForFeedback(
+        RuleAction ruleAction = RuleActionText.createForFeedback(
             "test_action_content", "d2:countIfZeroPos('test_var_one')" );
         RuleVariable ruleVariableOne = RuleVariableNewestEvent.create(
             "test_var_one", "test_data_element_one", RuleValueType.NUMERIC, true, new ArrayList<>());
 
-        Rule rule = Rule.create( null, null, "true", Arrays.asList( ruleAction ), "", "" );
+        Rule rule = Rule.create( null, null, "true", Collections.singletonList(ruleAction), "", "" );
 
-        RuleEngine.Builder ruleEngineBuilder = getRuleEngineBuilder( rule, Arrays.asList( ruleVariableOne ) );
+        RuleEngine.Builder ruleEngineBuilder = getRuleEngineBuilder( rule, List.of(ruleVariableOne));
 
         RuleEvent ruleEvent = RuleEvent.create( "test_event", "test_program_stage",
-            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, Arrays.asList(
-                RuleDataValue.create( new Date(), "test_program_stage", "test_data_element_one", "0" ) ), "", null);
+            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, List.of(
+                        RuleDataValue.create(new Date(), "test_program_stage", "test_data_element_one", "0")), "", null);
 
         RuleEvent ruleEvent1 = RuleEvent.create( "test_event1", "test_program_stage",
-            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, Arrays.asList(
-                RuleDataValue.create( new Date(), "test_program_stage", "test_data_element_one", "1" ) ), "", null);
+            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, List.of(
+                        RuleDataValue.create(new Date(), "test_program_stage", "test_data_element_one", "1")), "", null);
 
         RuleEvent ruleEvent2 = RuleEvent.create( "test_event1", "test_program_stage",
-            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, Arrays.asList(
-                RuleDataValue.create( new Date(), "test_program_stage", "test_data_element_one", "-3" ) ), "", null);
+            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, List.of(
+                        RuleDataValue.create(new Date(), "test_program_stage", "test_data_element_one", "-3")), "", null);
 
         List<RuleEffect> ruleEffects = ruleEngineBuilder.events( Arrays.asList( ruleEvent1, ruleEvent2 ) ).build()
             .evaluate( ruleEvent ).call();
@@ -995,18 +994,18 @@ public class RuleEngineFunctionTest
     public void evaluateD2Left()
         throws Exception
     {
-        RuleAction ruleAction = RuleActionDisplayText.createForFeedback(
+        RuleAction ruleAction = RuleActionText.createForFeedback(
             "test_action_content", "d2:left(#{test_var_one}, 4)" );
         RuleVariable ruleVariableOne = RuleVariableNewestEvent.create(
             "test_var_one", "test_data_element_one", RuleValueType.TEXT, true, new ArrayList<>());
 
-        Rule rule = Rule.create( null, null, "true", Arrays.asList( ruleAction ), "", "" );
+        Rule rule = Rule.create( null, null, "true", Collections.singletonList(ruleAction), "", "" );
 
-        RuleEngine.Builder ruleEngineBuilder = getRuleEngineBuilder( rule, Arrays.asList( ruleVariableOne ) );
+        RuleEngine.Builder ruleEngineBuilder = getRuleEngineBuilder( rule, List.of(ruleVariableOne));
 
         RuleEvent ruleEvent = RuleEvent.create( "test_event", "test_program_stage",
-            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, Arrays.asList(
-                RuleDataValue.create( new Date(), "test_program_stage", "test_data_element_one", "yyyy-mm-dd" ) ), "", null);
+            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, List.of(
+                        RuleDataValue.create(new Date(), "test_program_stage", "test_data_element_one", "yyyy-mm-dd")), "", null);
 
         List<RuleEffect> ruleEffects = ruleEngineBuilder.build().evaluate( ruleEvent ).call();
 
@@ -1019,18 +1018,18 @@ public class RuleEngineFunctionTest
     public void evaluateD2Right()
         throws Exception
     {
-        RuleAction ruleAction = RuleActionDisplayText.createForFeedback(
+        RuleAction ruleAction = RuleActionText.createForFeedback(
             "test_action_content", "d2:right(#{test_var_one}, 2)" );
         RuleVariable ruleVariableOne = RuleVariableNewestEvent.create(
             "test_var_one", "test_data_element_one", RuleValueType.TEXT, true, new ArrayList<>());
 
-        Rule rule = Rule.create( null, null, "true", Arrays.asList( ruleAction ), "", "" );
+        Rule rule = Rule.create( null, null, "true", Collections.singletonList(ruleAction), "", "" );
 
-        RuleEngine.Builder ruleEngineBuilder = getRuleEngineBuilder( rule, Arrays.asList( ruleVariableOne ) );
+        RuleEngine.Builder ruleEngineBuilder = getRuleEngineBuilder( rule, List.of(ruleVariableOne));
 
         RuleEvent ruleEvent = RuleEvent.create( "test_event", "test_program_stage",
-            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, Arrays.asList(
-                RuleDataValue.create( new Date(), "test_program_stage", "test_data_element_one", "yyyy-mm-dd" ) ), "", null);
+            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, List.of(
+                        RuleDataValue.create(new Date(), "test_program_stage", "test_data_element_one", "yyyy-mm-dd")), "", null);
 
         List<RuleEffect> ruleEffects = ruleEngineBuilder.build().evaluate( ruleEvent ).call();
 
@@ -1043,18 +1042,18 @@ public class RuleEngineFunctionTest
     public void evaluateD2Concatenate()
         throws Exception
     {
-        RuleAction ruleAction = RuleActionDisplayText.createForFeedback(
+        RuleAction ruleAction = RuleActionText.createForFeedback(
             "test_action_content", "d2:concatenate(#{test_var_one}, '+days')" );
         RuleVariable ruleVariableOne = RuleVariableNewestEvent.create(
             "test_var_one", "test_data_element_one", RuleValueType.TEXT, true, new ArrayList<>());
 
-        Rule rule = Rule.create( null, null, "true", Arrays.asList( ruleAction ), "", "" );
+        Rule rule = Rule.create( null, null, "true", Collections.singletonList(ruleAction), "", "" );
 
-        RuleEngine.Builder ruleEngineBuilder = getRuleEngineBuilder( rule, Arrays.asList( ruleVariableOne ) );
+        RuleEngine.Builder ruleEngineBuilder = getRuleEngineBuilder( rule, List.of(ruleVariableOne));
 
         RuleEvent ruleEvent = RuleEvent.create( "test_event", "test_program_stage",
-            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, Arrays.asList(
-                RuleDataValue.create( new Date(), "test_program_stage", "test_data_element_one", "weeks" ) ), "", null);
+            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, List.of(
+                        RuleDataValue.create(new Date(), "test_program_stage", "test_data_element_one", "weeks")), "", null);
 
         List<RuleEffect> ruleEffects = ruleEngineBuilder.build().evaluate( ruleEvent ).call();
 
@@ -1067,18 +1066,18 @@ public class RuleEngineFunctionTest
     public void evaluateD2ValidatePattern()
         throws Exception
     {
-        RuleAction ruleAction = RuleActionDisplayText.createForFeedback(
+        RuleAction ruleAction = RuleActionText.createForFeedback(
             "test_action_content", "d2:validatePattern(#{test_var_one}, '.*555.*')" );
         RuleVariable ruleVariableOne = RuleVariableNewestEvent.create(
             "test_var_one", "test_data_element_one", RuleValueType.TEXT, true, new ArrayList<>());
 
-        Rule rule = Rule.create( null, null, "true", Arrays.asList( ruleAction ), "", "" );
+        Rule rule = Rule.create( null, null, "true", Collections.singletonList(ruleAction), "", "" );
 
-        RuleEngine.Builder ruleEngineBuilder = getRuleEngineBuilder( rule, Arrays.asList( ruleVariableOne ) );
+        RuleEngine.Builder ruleEngineBuilder = getRuleEngineBuilder( rule, List.of(ruleVariableOne));
 
         RuleEvent ruleEvent = RuleEvent.create( "test_event", "test_program_stage",
-            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, Arrays.asList(
-                RuleDataValue.create( new Date(), "test_program_stage", "test_data_element_one", "44455545454" ) ),
+            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, List.of(
+                        RuleDataValue.create(new Date(), "test_program_stage", "test_data_element_one", "44455545454")),
             "", null);
 
         List<RuleEffect> ruleEffects = ruleEngineBuilder.build().evaluate( ruleEvent ).call();
@@ -1088,8 +1087,8 @@ public class RuleEngineFunctionTest
         assertEquals( "true", ruleEffects.get( 0 ).data() );
 
         RuleEvent ruleEvent2 = RuleEvent.create( "test_event", "test_program_stage",
-            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, Arrays.asList(
-                RuleDataValue.create( new Date(), "test_program_stage", "test_data_element_one", "444887777" ) ), "", null);
+            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, List.of(
+                        RuleDataValue.create(new Date(), "test_program_stage", "test_data_element_one", "444887777")), "", null);
 
         List<RuleEffect> ruleEffects2 = ruleEngineBuilder.build().evaluate( ruleEvent2 ).call();
 
@@ -1102,18 +1101,18 @@ public class RuleEngineFunctionTest
     public void evaluateD2Length()
         throws Exception
     {
-        RuleAction ruleAction = RuleActionDisplayKeyValuePair.createForFeedback(
+        RuleAction ruleAction = RuleActionText.createForFeedback(
             "test_action_content", "d2:length(#{test_var_one})" );
         RuleVariable ruleVariableOne = RuleVariableNewestEvent.create(
             "test_var_one", "test_data_element_one", RuleValueType.TEXT, true, new ArrayList<>());
 
-        Rule rule = Rule.create( null, null, "true", Arrays.asList( ruleAction ), "", "" );
+        Rule rule = Rule.create( null, null, "true", List.of(ruleAction), "", "" );
 
-        RuleEngine.Builder ruleEngineBuilder = getRuleEngineBuilder( rule, Arrays.asList( ruleVariableOne ) );
+        RuleEngine.Builder ruleEngineBuilder = getRuleEngineBuilder( rule, List.of(ruleVariableOne));
 
         RuleEvent ruleEvent = RuleEvent.create( "test_event", "test_program_stage",
-            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, Arrays.asList(
-                RuleDataValue.create( new Date(), "test_program_stage", "test_data_element_one", "testString" ) ), "", null);
+            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, List.of(
+                        RuleDataValue.create(new Date(), "test_program_stage", "test_data_element_one", "testString")), "", null);
 
         List<RuleEffect> ruleEffects = ruleEngineBuilder.build().evaluate( ruleEvent ).call();
 
@@ -1126,19 +1125,19 @@ public class RuleEngineFunctionTest
     public void evaluateD2Split()
         throws Exception
     {
-        RuleAction ruleAction = RuleActionDisplayKeyValuePair.createForFeedback(
+        RuleAction ruleAction = RuleActionText.createForFeedback(
             "test_action_content", "d2:split(#{test_var_one},'-',2)" );
         RuleVariable ruleVariableOne = RuleVariableNewestEvent.create(
             "test_var_one", "test_data_element_one", RuleValueType.TEXT, true, new ArrayList<>());
 
-        Rule rule = Rule.create( null, null, "true", Arrays.asList( ruleAction ), "", "" );
+        Rule rule = Rule.create( null, null, "true", List.of(ruleAction), "", "" );
 
-        RuleEngine.Builder ruleEngineBuilder = getRuleEngineBuilder( rule, Arrays.asList( ruleVariableOne ) );
+        RuleEngine.Builder ruleEngineBuilder = getRuleEngineBuilder( rule, List.of(ruleVariableOne));
 
         RuleEvent ruleEvent = RuleEvent.create( "test_event", "test_program_stage",
-            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, Arrays.asList(
-                RuleDataValue
-                    .create( new Date(), "test_program_stage", "test_data_element_one", "test-String-for-split" ) ),
+            RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, List.of(
+                        RuleDataValue
+                                .create(new Date(), "test_program_stage", "test_data_element_one", "test-String-for-split")),
             "", null);
 
         List<RuleEffect> ruleEffects = ruleEngineBuilder.build().evaluate( ruleEvent ).call();
@@ -1152,7 +1151,7 @@ public class RuleEngineFunctionTest
     public void evaluateNestedFunctionCalls()
         throws Exception
     {
-        RuleAction ruleAction = RuleActionDisplayKeyValuePair.createForFeedback(
+        RuleAction ruleAction = RuleActionText.createForFeedback(
             "test_action_content", "d2:floor(#{test_var_one} + d2:ceil(#{test_var_three})) " +
                 "/ 5 * d2:ceil(#{test_var_two})" );
 
@@ -1163,7 +1162,7 @@ public class RuleEngineFunctionTest
         RuleVariable ruleVariableThree = RuleVariableCurrentEvent.create(
             "test_var_three", "test_data_element_three", RuleValueType.NUMERIC, true, new ArrayList<>());
 
-        Rule rule = Rule.create( null, null, "true", Arrays.asList( ruleAction ), "", "" );
+        Rule rule = Rule.create( null, null, "true", List.of(ruleAction), "", "" );
 
         RuleEngine ruleEngine = getRuleEngine( rule,
             Arrays.asList( ruleVariableOne, ruleVariableTwo, ruleVariableThree ) );
@@ -1184,7 +1183,7 @@ public class RuleEngineFunctionTest
     public void evaluateD2ZScoreWFA()
         throws Exception
     {
-        RuleAction ruleAction = RuleActionDisplayKeyValuePair.createForFeedback(
+        RuleAction ruleAction = RuleActionText.createForFeedback(
             "test_action_content", "true" );
         RuleVariable ruleVariableOne = RuleVariableNewestEvent.create(
             "test_var_one", "test_data_element_one", RuleValueType.TEXT, true, new ArrayList<>());
@@ -1193,7 +1192,7 @@ public class RuleEngineFunctionTest
             "test_var_two", "test_data_element_two", RuleValueType.TEXT, true, new ArrayList<>());
 
         Rule rule = Rule
-            .create( null, null, "d2:zScoreWFA(1,#{test_var_one},#{test_var_two}) == 0", Arrays.asList( ruleAction ),
+            .create( null, null, "d2:zScoreWFA(1,#{test_var_one},#{test_var_two}) == 0", List.of(ruleAction),
                 "", "" );
 
         RuleEngine.Builder ruleEngineBuilder = getRuleEngineBuilder( rule,
@@ -1214,7 +1213,7 @@ public class RuleEngineFunctionTest
     public void evaluateD2ZScoreHFAGirl()
         throws Exception
     {
-        RuleAction ruleAction = RuleActionDisplayKeyValuePair.createForFeedback(
+        RuleAction ruleAction = RuleActionText.createForFeedback(
             "test_action_content", "true" );
         RuleVariable ruleVariableOne = RuleVariableNewestEvent.create(
             "test_var_one", "test_data_element_one", RuleValueType.TEXT, true, new ArrayList<>());
@@ -1223,7 +1222,7 @@ public class RuleEngineFunctionTest
             "test_var_two", "test_data_element_two", RuleValueType.TEXT, true, new ArrayList<>());
 
         Rule rule = Rule
-            .create( null, null, "d2:zScoreHFA(12,#{test_var_one},#{test_var_two}) == -3", Arrays.asList( ruleAction ),
+            .create( null, null, "d2:zScoreHFA(12,#{test_var_one},#{test_var_two}) == -3", List.of(ruleAction),
                 "", "" );
 
         RuleEngine.Builder ruleEngineBuilder = getRuleEngineBuilder( rule,
@@ -1244,7 +1243,7 @@ public class RuleEngineFunctionTest
     public void evaluateD2ZScoreHFABoy()
         throws Exception
     {
-        RuleAction ruleAction = RuleActionDisplayKeyValuePair.createForFeedback(
+        RuleAction ruleAction = RuleActionText.createForFeedback(
             "test_action_content", "true" );
         RuleVariable ruleVariableOne = RuleVariableNewestEvent.create(
             "test_var_one", "test_data_element_one", RuleValueType.TEXT, true, new ArrayList<>());
@@ -1253,7 +1252,7 @@ public class RuleEngineFunctionTest
             "test_var_two", "test_data_element_two", RuleValueType.TEXT, true, new ArrayList<>());
 
         Rule rule = Rule
-            .create( null, null, "d2:zScoreHFA(10,#{test_var_one},#{test_var_two}) == -2", Arrays.asList( ruleAction ),
+            .create( null, null, "d2:zScoreHFA(10,#{test_var_one},#{test_var_two}) == -2", List.of(ruleAction),
                 "", "" );
 
         RuleEngine.Builder ruleEngineBuilder = getRuleEngineBuilder( rule,
@@ -1274,7 +1273,7 @@ public class RuleEngineFunctionTest
     public void evaluateD2ZScoreWFHBoy()
         throws Exception
     {
-        RuleAction ruleAction = RuleActionDisplayKeyValuePair.createForFeedback(
+        RuleAction ruleAction = RuleActionText.createForFeedback(
             "test_action_content", "true" );
         RuleVariable ruleVariableOne = RuleVariableNewestEvent.create(
             "test_var_one", "test_data_element_one", RuleValueType.TEXT, true, new ArrayList<>());
@@ -1283,7 +1282,7 @@ public class RuleEngineFunctionTest
             "test_var_two", "test_data_element_two", RuleValueType.TEXT, true, new ArrayList<>());
 
         Rule rule = Rule
-            .create( null, null, "d2:zScoreWFH(52,#{test_var_one},A{test_var_two}) < 2", Arrays.asList( ruleAction ),
+            .create( null, null, "d2:zScoreWFH(52,#{test_var_one},A{test_var_two}) < 2", List.of(ruleAction),
                 "", "" );
 
         RuleEngine.Builder ruleEngineBuilder = getRuleEngineBuilder( rule,
@@ -1304,7 +1303,7 @@ public class RuleEngineFunctionTest
     public void evaluateD2ZScoreWFHGirl()
         throws Exception
     {
-        RuleAction ruleAction = RuleActionDisplayKeyValuePair.createForFeedback(
+        RuleAction ruleAction = RuleActionText.createForFeedback(
             "test_action_content", "d2:zScoreWFH(81.5,9.6,'female') == 2" );
         RuleVariable ruleVariableOne = RuleVariableNewestEvent.create(
             "test_var_one", "test_data_element_one", RuleValueType.TEXT, true, new ArrayList<>());
@@ -1313,7 +1312,7 @@ public class RuleEngineFunctionTest
             "test_var_two", "test_data_element_two", RuleValueType.TEXT, true, new ArrayList<>());
 
         Rule rule = Rule
-            .create( null, null, "d2:zScoreWFH(81.5,#{test_var_one},#{test_var_two}) == 2", Arrays.asList( ruleAction ),
+            .create( null, null, "d2:zScoreWFH(81.5,#{test_var_one},#{test_var_two}) == 2", List.of(ruleAction),
                 "", "" );
 
         RuleEngine.Builder ruleEngineBuilder = getRuleEngineBuilder( rule,
@@ -1334,7 +1333,7 @@ public class RuleEngineFunctionTest
     public void evaluateD2MaxValue()
         throws Exception
     {
-        RuleAction ruleAction = RuleActionDisplayKeyValuePair.createForFeedback(
+        RuleAction ruleAction = RuleActionText.createForFeedback(
             "test_action_content", "true" );
         RuleVariable ruleVariableOne = RuleVariableNewestEvent.create(
             "test_var_one", "test_data_element_one", RuleValueType.NUMERIC, true, new ArrayList<>());
@@ -1343,7 +1342,7 @@ public class RuleEngineFunctionTest
             "test_var_two", "test_data_element_two", RuleValueType.TEXT, true, new ArrayList<>());
 
         Rule rule = Rule
-            .create( null, null, "d2:maxValue(#{test_var_one}) == 8.0", Arrays.asList( ruleAction ), "", "" );
+            .create( null, null, "d2:maxValue(#{test_var_one}) == 8.0", List.of(ruleAction), "", "" );
 
         RuleEngine.Builder ruleEngineBuilder = getRuleEngineBuilder( rule,
             Arrays.asList( ruleVariableOne, ruleVariableTwo ) );
@@ -1375,7 +1374,7 @@ public class RuleEngineFunctionTest
     public void evaluateD2MaxValueWithStringValue()
         throws Exception
     {
-        RuleAction ruleAction = RuleActionDisplayKeyValuePair.createForFeedback(
+        RuleAction ruleAction = RuleActionText.createForFeedback(
             "test_action_content", "true" );
         RuleVariable ruleVariableOne = RuleVariableNewestEvent.create(
             "test_var_one", "test_data_element_one", RuleValueType.NUMERIC, true, new ArrayList<>());
@@ -1384,7 +1383,7 @@ public class RuleEngineFunctionTest
             "test_var_two", "test_data_element_two", RuleValueType.TEXT, true, new ArrayList<>());
 
         Rule rule = Rule
-            .create( null, null, "d2:maxValue('test_var_one') == 8.0", Arrays.asList( ruleAction ), "", "" );
+            .create( null, null, "d2:maxValue('test_var_one') == 8.0", List.of(ruleAction), "", "" );
 
         RuleEngine.Builder ruleEngineBuilder = getRuleEngineBuilder( rule,
             Arrays.asList( ruleVariableOne, ruleVariableTwo ) );
@@ -1415,7 +1414,7 @@ public class RuleEngineFunctionTest
     public void testMinValue()
         throws Exception
     {
-        RuleAction ruleAction = RuleActionDisplayKeyValuePair.createForFeedback(
+        RuleAction ruleAction = RuleActionText.createForFeedback(
             "test_action_content", "d2:minValue(#{test_var_one})" );
         RuleVariable ruleVariableOne = RuleVariableNewestEvent.create(
             "test_var_one", "test_data_element_one", RuleValueType.NUMERIC, true, new ArrayList<>());
@@ -1423,7 +1422,7 @@ public class RuleEngineFunctionTest
         RuleVariable ruleVariableTwo = RuleVariableNewestEvent.create(
             "test_var_two", "test_data_element_two", RuleValueType.TEXT, true, new ArrayList<>());
 
-        Rule rule = Rule.create( null, null, "true", Arrays.asList( ruleAction ), "", "" );
+        Rule rule = Rule.create( null, null, "true", List.of(ruleAction), "", "" );
 
         RuleEngine.Builder ruleEngineBuilder = getRuleEngineBuilder( rule,
             Arrays.asList( ruleVariableOne, ruleVariableTwo ) );
@@ -1455,7 +1454,7 @@ public class RuleEngineFunctionTest
     public void testMinValueWithStringValue()
         throws Exception
     {
-        RuleAction ruleAction = RuleActionDisplayKeyValuePair.createForFeedback(
+        RuleAction ruleAction = RuleActionText.createForFeedback(
             "test_action_content", "d2:minValue('test_var_one')" );
         RuleVariable ruleVariableOne = RuleVariableNewestEvent.create(
             "test_var_one", "test_data_element_one", RuleValueType.NUMERIC, true, new ArrayList<>());
@@ -1463,7 +1462,7 @@ public class RuleEngineFunctionTest
         RuleVariable ruleVariableTwo = RuleVariableNewestEvent.create(
             "test_var_two", "test_data_element_two", RuleValueType.TEXT, true, new ArrayList<>());
 
-        Rule rule = Rule.create( null, null, "true", Arrays.asList( ruleAction ), "", "" );
+        Rule rule = Rule.create( null, null, "true", List.of(ruleAction), "", "" );
 
         RuleEngine.Builder ruleEngineBuilder = getRuleEngineBuilder( rule,
             Arrays.asList( ruleVariableOne, ruleVariableTwo ) );
@@ -1504,27 +1503,27 @@ public class RuleEngineFunctionTest
         cal.add( java.util.Calendar.DATE, 4 );
         Date dayAfterTomorrow = cal.getTime();
 
-        RuleAction ruleAction = RuleActionDisplayText.createForFeedback(
+        RuleAction ruleAction = RuleActionText.createForFeedback(
             "test_action_content", "d2:lastEventDate('test_var_one')" );
         RuleVariable ruleVariableOne = RuleVariableNewestEvent.create(
             "test_var_one", "test_data_element_one", RuleValueType.TEXT, true, new ArrayList<>());
 
-        Rule rule = Rule.create( null, null, "true", Arrays.asList( ruleAction ), "test_rule", "" );
+        Rule rule = Rule.create( null, null, "true", Collections.singletonList(ruleAction), "test_rule", "" );
 
-        RuleEngine.Builder ruleEngineBuilder = getRuleEngineBuilder( rule, Arrays.asList( ruleVariableOne ) );
+        RuleEngine.Builder ruleEngineBuilder = getRuleEngineBuilder( rule, List.of(ruleVariableOne));
 
         RuleEvent ruleEvent1 = RuleEvent.create( "test_event1", "test_program_stage1",
-            RuleEvent.Status.ACTIVE, dayBeforeYesterday, new Date(), "", null, Arrays.asList(
-                RuleDataValue.create( dayBeforeYesterday, "test_program_stage1", "test_data_element_one", "value1" ) ),
+            RuleEvent.Status.ACTIVE, dayBeforeYesterday, new Date(), "", null, List.of(
+                        RuleDataValue.create(dayBeforeYesterday, "test_program_stage1", "test_data_element_one", "value1")),
             "", null);
 
         RuleEvent ruleEvent2 = RuleEvent.create( "test_event2", "test_program_stage2",
-            RuleEvent.Status.ACTIVE, yesterday, new Date(), "", null, Arrays.asList(
-                RuleDataValue.create( yesterday, "test_program_stage2", "test_data_element_one", "value2" ) ), "", null);
+            RuleEvent.Status.ACTIVE, yesterday, new Date(), "", null, List.of(
+                        RuleDataValue.create(yesterday, "test_program_stage2", "test_data_element_one", "value2")), "", null);
 
         RuleEvent ruleEvent3 = RuleEvent.create( "test_event3", "test_program_stage3",
-            RuleEvent.Status.ACTIVE, dayAfterTomorrow, dayAfterTomorrow, "", null, Arrays.asList(
-                RuleDataValue.create( dayAfterTomorrow, "test_program_stage3", "test_data_element_one", "value3" ) ),
+            RuleEvent.Status.ACTIVE, dayAfterTomorrow, dayAfterTomorrow, "", null, List.of(
+                        RuleDataValue.create(dayAfterTomorrow, "test_program_stage3", "test_data_element_one", "value3")),
             "", null);
 
         List<RuleEffect> ruleEffects = ruleEngineBuilder.events( Arrays.asList( ruleEvent1, ruleEvent2 ) ).build()
