@@ -2,7 +2,7 @@ package org.hisp.dhis.rules;
 
 import org.hisp.dhis.rules.models.Rule;
 import org.hisp.dhis.rules.models.RuleAction;
-import org.hisp.dhis.rules.models.RuleActionDisplayKeyValuePair;
+import org.hisp.dhis.rules.models.RuleActionText;
 import org.hisp.dhis.rules.models.RuleDataValue;
 import org.hisp.dhis.rules.models.RuleEffect;
 import org.hisp.dhis.rules.models.RuleEvent;
@@ -15,7 +15,7 @@ import org.junit.runner.RunWith;
 import org.junit.runners.JUnit4;
 
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
@@ -29,13 +29,13 @@ public class RuleEngineValueTypesTest
     public void booleanVariableWithoutValueMustFallbackToDefaultBooleanValue()
         throws Exception
     {
-        RuleAction ruleAction = RuleActionDisplayKeyValuePair
+        RuleAction ruleAction = RuleActionText
             .createForFeedback( "test_action_content", "#{test_variable}" );
-        Rule rule = Rule.create( null, null, "true", Arrays.asList( ruleAction ), "", "" );
+        Rule rule = Rule.create( null, null, "true", List.of(ruleAction), "", "" );
         RuleVariable ruleVariable = RuleVariableCurrentEvent
             .create( "test_variable", "test_data_element", RuleValueType.BOOLEAN, true, new ArrayList<>());
 
-        RuleEngine ruleEngine = getRuleEngine( rule, Arrays.asList( ruleVariable ) );
+        RuleEngine ruleEngine = getRuleEngine( rule, List.of(ruleVariable));
 
         RuleEvent ruleEvent = RuleEvent.create( "test_event", "test_program_stage",
             RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, new ArrayList<RuleDataValue>(), "", null);
@@ -50,13 +50,13 @@ public class RuleEngineValueTypesTest
     public void numericVariableWithoutValueMustFallbackToDefaultNumericValue()
         throws Exception
     {
-        RuleAction ruleAction = RuleActionDisplayKeyValuePair
+        RuleAction ruleAction = RuleActionText
             .createForFeedback( "test_action_content", "#{test_variable}" );
-        Rule rule = Rule.create( null, null, "true", Arrays.asList( ruleAction ), "", "" );
+        Rule rule = Rule.create( null, null, "true", List.of(ruleAction), "", "" );
         RuleVariable ruleVariable = RuleVariableCurrentEvent
             .create( "test_variable", "test_data_element", RuleValueType.NUMERIC, true, new ArrayList<>());
 
-        RuleEngine ruleEngine = getRuleEngine( rule, Arrays.asList( ruleVariable ) );
+        RuleEngine ruleEngine = getRuleEngine( rule, List.of(ruleVariable));
 
         RuleEvent ruleEvent = RuleEvent.create( "test_event", "test_program_stage",
             RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, new ArrayList<RuleDataValue>(), "", null);
@@ -71,13 +71,13 @@ public class RuleEngineValueTypesTest
     public void textVariableWithoutValueMustFallbackToDefaultTextValue()
         throws Exception
     {
-        RuleAction ruleAction = RuleActionDisplayKeyValuePair
+        RuleAction ruleAction = RuleActionText
             .createForFeedback( "test_action_content", "#{test_variable}" );
-        Rule rule = Rule.create( null, null, "true", Arrays.asList( ruleAction ), "", "" );
+        Rule rule = Rule.create( null, null, "true", List.of(ruleAction), "", "" );
         RuleVariable ruleVariable = RuleVariableCurrentEvent
             .create( "test_variable", "test_data_element", RuleValueType.TEXT, true, new ArrayList<>());
 
-        RuleEngine ruleEngine = getRuleEngine( rule, Arrays.asList( ruleVariable ) );
+        RuleEngine ruleEngine = getRuleEngine( rule, List.of(ruleVariable));
 
         RuleEvent ruleEvent = RuleEvent.create( "test_event", "test_program_stage",
             RuleEvent.Status.ACTIVE, new Date(), new Date(), "", null, new ArrayList<RuleDataValue>(), "", null);
@@ -92,7 +92,7 @@ public class RuleEngineValueTypesTest
     {
         return RuleEngineContext
             .builder()
-            .rules( Arrays.asList( rule ) )
+            .rules(Collections.singletonList(rule))
             .ruleVariables( ruleVariables )
             .supplementaryData( new HashMap<String, List<String>>() )
             .constantsValue( new HashMap<String, String>() )
